# mysjtu-events-sync

./: .gitignore  main.py  pyproject.toml
